--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -980,7 +980,7 @@ header {
 @media screen and (max-width:767px) {
 	.Nav-wrapper {
 		width: 29.16667rem;
-		padding: 16rem 0 0;
+		padding: 8rem 0 0;
 		margin-left: auto;
 		margin-right: auto;
 		height: 100vh;
@@ -989,14 +989,54 @@ header {
 		position: relative;
 	}
 
-	.navItemLink {
-		font-size: 4.5rem;
+	.nav-num {
+		margin-right:
+			0.2rem;
+		margin-left:
+			-3rem;
+		top:
+			-1.6rem;
 	}
+
+	.navItemLink {
+		font-size: 2.5rem;
+		line-height: 3rem;
+	}
+
+	.Menu-subnav {
+		-ms-flex-wrap: wrap;
+		flex-wrap: wrap;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		justify-content: space-evenly;
+		margin-top:
+			-0.5rem;
+		margin-bottom:
+			1.8rem;
+	}
+
+	.Menu-subnav {
+		margin-left:
+			1.6rem;
+	}
+
+	.sub-nav {
+		margin-right:
+			3rem;
+	}
+
 
 	.nav-container {
 		height: calc(var(--vh)*100);
 		width: 100vw;
-		overflow-y: scroll;
+		// overflow-y: scroll;
 		overflow-x: hidden;
+	}
+
+	.NavBtn[data-v-2cdfcd8e] {
+		color: #fff;
+		width: 4rem;
+		height: 4rem;
+		z-index: 99;
 	}
 }
