--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -4,6 +4,7 @@
     margin-bottom: 10%;
     overflow-x: hidden;
     overflow-y: visible;
+
     .top-b {
         position: absolute;
         right: -6%;
@@ -15,7 +16,8 @@
         -webkit-text-fill-color: white;
         z-index: -1;
         overflow: hidden;
-         span {
+
+        span {
             display: inline-block;
             font-size: 0.9em;
             text-align: center;
@@ -25,13 +27,15 @@
             overflow: hidden;
         }
     }
-  .typo-p {
+
+    .typo-p {
         text-align: center;
         padding: 0px 20px;
         overflow: hidden;
         padding: 0px 9%;
         margin-top: 0%;
     }
+
     .bot-b {
         position: absolute;
         left: -7%;
@@ -46,10 +50,17 @@
     }
 }
 
-#blogs-sction{
-    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+#blogs-sction {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
         max-width: 1320px;
     }
+
     .pr-list {
         display: -ms-flexbox;
         display: flex;
@@ -63,16 +74,19 @@
         padding: 120px 0px 80px 0px;
         z-index: 0;
     }
+
     .pr-list .bl-main {
         position: relative;
         width: 50%;
         padding: 0 0 60px;
         overflow: hidden;
-      }
-       .pr-list .bl-main  .pr-thum {
-       width: 100%;
-      }
-       .pr-list .pr-thum a{
+    }
+
+    .pr-list .bl-main .pr-thum {
+        width: 100%;
+    }
+
+    .pr-list .pr-thum a {
         position: relative;
         display: block;
         overflow: hidden;
@@ -80,25 +94,29 @@
         padding: 1px;
         z-index: 3;
     }
-     .pr-list .pr-thum a img{
+
+    .pr-list .pr-thum a img {
         width: 100%;
     }
-     .pr-list .bl-main:nth-child(2n+2) {
+
+    .pr-list .bl-main:nth-child(2n+2) {
         margin: 70px 0 0;
     }
-     .p-prj-thum-shadow {
+
+    .p-prj-thum-shadow {
         position: absolute;
         top: 30px;
         z-index: -1;
         text-align: center;
         transform: translateZ(-100px);
     }
+
     /* #work-sction .bl-main .p-prj-thum-shadow img {
         opacity: 0.5!important;
         transform: scale3d(1, 1, 1);
         transition: transform, opacity 2.4s, 2.4s 1.5s;
     } */
-     .p-prj-thum-shadow img {
+    .p-prj-thum-shadow img {
         position: relative;
         width: 84%;
         /* height: 100%; */
@@ -107,7 +125,8 @@
         opacity: 0;
         transform: scale(0);
     }
-     .p-prj-caption {
+
+    .p-prj-caption {
         width: 90%;
         padding-left: 17px;
         pointer-events: none;
@@ -116,9 +135,10 @@
         // display: flex;
         // justify-content: space-between;
         margin-top: 30px;
-    
+
     }
-     .p-prj-caption-name {
+
+    .p-prj-caption-name {
         font-size: 28px;
         letter-spacing: 2.5px;
         font-family: 'NeueHaasDisplay-me';
@@ -126,12 +146,14 @@
         line-height: 1.3;
         margin-bottom: 1%;
     }
-     .p-prj-caption-client {
+
+    .p-prj-caption-client {
         font-size: 18px;
         margin-top: 0px;
         color: #000;
     }
-     .p-prj-caption-credit {
+
+    .p-prj-caption-credit {
         font-size: 15px;
         letter-spacing: 2px;
         line-height: 19px;
@@ -139,14 +161,15 @@
         margin-top: 0;
         font-family: 'NeueHaasDisplay-me';
     }
-    
-} 
+
+}
 
 /* blog-deatails */
 .page-section--hero-article {
     padding-top: 19rem;
     height: 80vh;
 }
+
 .pb-24 {
     padding-bottom: 1.5rem;
 }
@@ -155,6 +178,7 @@
 .relative {
     position: relative;
 }
+
 .page-section--hero-article .field--image {
     --aspect-ratio: 463/560;
 }
@@ -164,14 +188,20 @@
     width: 100%;
     text-align: center;
 }
+
 .z-1 {
     z-index: 1;
 }
+
 /* .bg-lazy-placeholder {
     background-color: #f2f2f2;
     background-color: var(--color-lazy-placeholder,#f2f2f2);
 } */
-.embed-responsive .embed-responsive-item, .embed-responsive embed, .embed-responsive iframe, .embed-responsive object, .embed-responsive video {
+.embed-responsive .embed-responsive-item,
+.embed-responsive embed,
+.embed-responsive iframe,
+.embed-responsive object,
+.embed-responsive video {
     position: absolute;
     top: -160px;
     left: 0;
@@ -179,12 +209,15 @@
     height: 100%;
     border: 0;
 }
-.page-section--hero-article .field--title .line:first-child{
+
+.page-section--hero-article .field--title .line:first-child {
     z-index: 2;
 }
+
 .w-full {
     width: 600px;
 }
+
 .object-cover {
     -o-object-fit: cover;
     object-fit: cover;
@@ -194,9 +227,10 @@
     height: 100%;
 } */
 .lazyloaded {
-    transition: opacity .8s cubic-bezier(.26,1,.48,1);
+    transition: opacity .8s cubic-bezier(.26, 1, .48, 1);
     opacity: 1;
 }
+
 .text-center {
     text-align: center;
 }
@@ -207,18 +241,23 @@
     bottom: 0;
     left: 0;
 }
+
 .absolute {
     position: absolute;
 }
+
 .justify-center {
     justify-content: center;
 }
+
 .items-center {
     align-items: center;
 }
+
 .flex {
     display: flex;
 }
+
 .headline-edito {
     font-family: 'ogg-roman';
     font-weight: 300;
@@ -229,9 +268,11 @@
     padding-bottom: .3665rem;
     margin-bottom: -.5rem;
 }
+
 .blog-conent {
     padding: 0 10%;
-    p{
+
+    p {
         letter-spacing: 2px;
         font-family: 'NeueHaasDisplay-roman';
         margin-bottom: 11px;
@@ -240,7 +281,8 @@
         margin-bottom: 5%;
     }
 }
-@media (min-width: 1024px){
+
+@media (min-width: 1024px) {
     .headline-edito {
         font-size: 4.75rem;
         line-height: 4.5rem;
@@ -252,7 +294,7 @@
 
 }
 
-@media (min-width: 1280px){
+@media (min-width: 1280px) {
     .headline-edito {
         font-size: 8.75rem;
         line-height: 8rem;
@@ -261,79 +303,93 @@
         padding-bottom: .29125rem;
         margin-bottom: -.5rem;
     }
+
     #blogs-sction .p-prj-caption-name {
         font-size: 20px;
     }
 }
+
 .split-text--lines {
     display: inline-flex;
     flex-direction: column;
 }
+
 .whitespace-pre {
     white-space: pre;
 }
 
-.lines{
+.lines {
     margin-top: 100px;
 }
-.back-text{
+
+.back-text {
     position: absolute;
     z-index: 1;
     top: -160px;
     right: -180px;
     font-family: "Beatrice-Display-Light";
 }
-.blog-left h2{
+
+.blog-left h2 {
     font-size: 3rem;
     font-family: 'NeueHaasDisplay-me';
     letter-spacing: 5px;
     padding-left: 5%;
 }
-.blog-left{
+
+.blog-left {
     width: 30rem;
     position: relative;
 }
-.blog-right{
+
+.blog-right {
     width: 50%;
     padding-left: 5em;
 }
-.blog-right p{
+
+.blog-right p {
     letter-spacing: 2px;
-        font-family: 'NeueHaasDisplay-roman';
-        margin-bottom: 11px;
-        font-size: 18px;
-        line-height: 1.6;
+    font-family: 'NeueHaasDisplay-roman';
+    margin-bottom: 11px;
+    font-size: 18px;
+    line-height: 1.6;
 }
-.p-img{
+
+.p-img {
     // position: absolute;
     // top: 7px;
     // z-index: -1;
 }
-.p-img img{
+
+.p-img img {
     // width: 270px;
 }
+
 // p{
 //         color: #5c5c5c;
 // }
-.qts{
+.qts {
     padding: 4rem 15rem;
     font-family: 'ogg-medium';
     letter-spacing: 2px;
     text-align: center;
     font-style: italic;
 }
-.qts h1{
+
+.qts h1 {
     line-height: 1.7;
     font-size: 3em;
     font-family: 'Bebas Neue';
 }
 
-.blog-details{
+.blog-details {
     margin-top: 3%;
     margin-bottom: 11%;
-    .container{
+
+    .container {
         width: 80%;
-        .blog-prha{
+
+        .blog-prha {
             text-align: center;
             font-size: 24px;
             color: #3d3d3d;
@@ -343,8 +399,9 @@
             margin-bottom: 4%;
             padding: 0 0%;
         }
-        .content{
-            .typ{
+
+        .content {
+            .typ {
                 text-align: center;
                 font-size: 14px;
                 letter-spacing: 1px;
@@ -352,29 +409,34 @@
                 font-family: 'NeueHaasDisplay-me';
                 transform: translateY(210px) !important;
             }
-            h1{
+
+            h1 {
                 font-size: 6em;
-    padding: 0px 5%;
-    text-align: center;
-    line-height: 1.4;
-    font-family: 'NeueHaasDisplay-roman';
-    transform: translateY(210px);
-    color: #000;
-    text-shadow: 1px 1px 10px #0006;
+                padding: 0px 5%;
+                text-align: center;
+                line-height: 1.4;
+                font-family: 'NeueHaasDisplay-roman';
+                transform: translateY(210px);
+                color: #000;
+                text-shadow: 1px 1px 10px #0006;
             }
         }
     }
 }
-.blg{
+
+.blg {
     padding: 0 10%;
 }
-.blog-hero{
+
+.blog-hero {
     margin-top: 9%;
 }
-@media screen and (max-width:1280px){
+
+@media screen and (max-width:1280px) {
     #blogs-sction {
         padding: 0px 10%;
     }
+
     .blog-details .container .content h1 {
         font-size: 5em;
         padding: 0px 5%;
@@ -388,22 +450,36 @@
 
 }
 
-@media screen and (max-width:767px){
-    #blogs-sction .pr-list{
+@media screen and (max-width:767px) {
+
+    .head-ser {
+        padding-top: 15%;
+        position: relative;
+        margin-bottom: 10%;
+        /* overflow-x: hidden; */
+        /* overflow-y: hidden; */
+    }
+
+    #blogs-sction .pr-list {
         width: 100%;
     }
-    #blogs-sction .pr-list .bl-main{
+
+    #blogs-sction .pr-list .bl-main {
         width: 100%;
     }
-    #blogs-sction .pr-list .pr-thum a{
+
+    #blogs-sction .pr-list .pr-thum a {
         width: 100%;
     }
-    #blogs-sction .p-prj-caption-name{
+
+    #blogs-sction .p-prj-caption-name {
         font-size: 18px;
     }
+
     #blogs-sction .pr-list .bl-main:nth-child(2n+2) {
         margin: 20px 0 0;
     }
+
     .blog-details .container .content h1 {
         font-size: 4em;
         padding: 0px 5%;
@@ -417,6 +493,7 @@
         margin-bottom: 60%;
         mix-blend-mode: difference;
     }
+
     .blog-details .container .blog-prha {
         text-align: center;
         font-size: 30px;
@@ -427,19 +504,23 @@
         margin-bottom: 4%;
         padding: 0 0%;
     }
-    .flex{
+
+    .flex {
         display: block;
     }
+
     .blog-left {
         width: 100%;
         position: relative;
         padding: 0 20px;
     }
+
     .p-img {
         position: unset;
         z-index: -1;
         margin-top: 4%;
     }
+
     .blog-left h2 {
         font-size: 2.5rem;
         font-family: 'NeueHaasDisplay-me';
@@ -449,10 +530,12 @@
         margin-top: 15%;
         margin-bottom: 8%;
     }
+
     .blog-right {
         width: 100%;
         padding: 8%;
     }
+
     .blog-right p {
         letter-spacing: 2px;
         font-family: 'NeueHaasDisplay-roman';
@@ -460,15 +543,17 @@
         font-size: 18px;
         line-height: 1.6;
     }
+
     .qts {
         padding: 4rem 2rem;
         font-family: 'ogg-medium';
         letter-spacing: 2px;
         text-align: center;
         font-style: italic;
+
         h1 {
             line-height: 1.3;
         }
     }
-    
+
 }
