--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -608,9 +608,11 @@
     }
 
     .works__hero__line {
-      font-size: 3.2em;
+      font-size: 4.8em;
       line-height: 1.1;
       width: 100%;
+      font-family: 'Bebas Neue';
+
     }
   }
 
