--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -221,6 +221,14 @@ header {
 	}
 }
 
+.logo {
+	img {
+		width: 50px;
+	}
+}
+
+
+
 @keyframes scroll-left {
 	0% {
 		-moz-transform: translateX(0%);
