--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -411,7 +411,7 @@
                             height: 38vh;
 
                             .macbook_pro {
-                                content: url('https://www.weareenigma.com/enigma-new/assets/resources/img/MacBook_Pro.png');
+                                content: url('/assets/resources/img/MacBook_Pro.png');
                                 position: relative;
                                 top: auto;
                                 bottom: 0;
@@ -966,7 +966,7 @@
                             height: 80vh;
 
                             .macbook_pro {
-                                content: url('https://www.weareenigma.com/enigma-new/assets/resources/img/MacBook_Pro.png');
+                                content: url('/assets/resources/img/MacBook_Pro.png');
                                 position: relative;
                                 top: auto;
                                 bottom: 0;
@@ -1120,7 +1120,7 @@
                     height: 80vh;
 
                     .macbook_pro {
-                        content: url("https://www.weareenigma.com/enigma-new/assets/resources/img/MacBook_Pro.png");
+                        content: url("/assets/resources/img/MacBook_Pro.png");
                         position: relative;
                         top: auto;
                         bottom: 0;
