--- a/assets/resources/styles/less/modules/_preloader.less
+++ b/assets/resources/styles/less/modules/_preloader.less
@@ -64,7 +64,7 @@
 #noise {
   -webkit-animation: grain 6s steps(10) infinite;
   animation: grain 6s steps(10) infinite;
-  background-image: url(https://www.weareenigma.com/enigma-new/assets/resources/img/noise-full.png);
+  background-image: url(/assets/resources/img/noise-full.png);
   background-repeat: repeat;
   height: 300%;
   left: -50%;
@@ -79,7 +79,7 @@
 #noise2 {
   -webkit-animation: grain 6s steps(10) infinite;
   animation: grain 6s steps(10) infinite;
-  background-image: url(https://www.weareenigma.com/enigma-new/assets/resources/img/noise-full.png);
+  background-image: url(/assets/resources/img/noise-full.png);
   background-repeat: repeat;
   height: 300%;
   left: -50%;
