--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -1507,7 +1507,7 @@ template {
 #noise {
   -webkit-animation: grain 6s steps(10) infinite;
   animation: grain 6s steps(10) infinite;
-  background-image: url(https://www.weareenigma.com/enigma-new/assets/resources/img/noise-full.png);
+  background-image: url(/assets/resources/img/noise-full.png);
   background-repeat: repeat;
   height: 300%;
   left: -50%;
@@ -1521,7 +1521,7 @@ template {
 #noise2 {
   -webkit-animation: grain 6s steps(10) infinite;
   animation: grain 6s steps(10) infinite;
-  background-image: url(https://www.weareenigma.com/enigma-new/assets/resources/img/noise-full.png);
+  background-image: url(/assets/resources/img/noise-full.png);
   background-repeat: repeat;
   height: 300%;
   left: -50%;
@@ -1838,6 +1838,9 @@ header {
   z-index: 999;
 }
 .en-logo img {
+  width: 50px;
+}
+.logo img {
   width: 50px;
 }
 @-webkit-keyframes scroll-left {
@@ -2963,7 +2966,7 @@ header {
     height: 38vh;
   }
   .hero-section .container_lapi .container_lapi_content .container_lapi_content_together .container_lapi_content_inner .lapi_div .macbook_pro {
-    content: url('https://www.weareenigma.com/enigma-new/assets/resources/img/MacBook_Pro.png');
+    content: url('/assets/resources/img/MacBook_Pro.png');
     position: relative;
     top: auto;
     bottom: 0;
@@ -3477,7 +3480,7 @@ header {
     height: 80vh;
   }
   .hero-section .container_lapi .container_lapi_content .container_lapi_content_together .container_lapi_content_inner .lapi_div .macbook_pro {
-    content: url('https://www.weareenigma.com/enigma-new/assets/resources/img/MacBook_Pro.png');
+    content: url('/assets/resources/img/MacBook_Pro.png');
     position: relative;
     top: auto;
     bottom: 0;
@@ -3614,7 +3617,7 @@ header {
     height: 80vh;
   }
   .hero-section .container_lapi_content_together .container_lapi_content_inner .lapi_div .macbook_pro {
-    content: url("https://www.weareenigma.com/enigma-new/assets/resources/img/MacBook_Pro.png");
+    content: url("/assets/resources/img/MacBook_Pro.png");
     position: relative;
     top: auto;
     bottom: 0;
@@ -4603,7 +4606,7 @@ header {
 .t-d3-fluid {
   margin-top: 0px;
   margin-bottom: 0px;
-  font-family: 'Rogie';
+  font-family: 'NeueHaasDisplay-me';
   font-size: 2.6vw;
   line-height: 0.9;
   letter-spacing: 0.05em;
@@ -7033,6 +7036,10 @@ header {
     font-size: 1.5em;
     letter-spacing: 2px;
     overflow: hidden;
+    display: block;
+  }
+  #about2 .about-f .m-hide {
+    display: none;
   }
   #about2 .about-f .big-h {
     width: 100%;
@@ -7461,6 +7468,21 @@ header {
     letter-spacing: 0.05em;
     text-transform: capitalize;
   }
+  .mob-port .en-form-submit {
+    margin: 0 0 0;
+    /* overflow: hidden; */
+    /* height: 100%; */
+    text-align: center;
+    margin-bottom: 20%;
+    margin-top: 40px;
+    margin-right: 10px;
+  }
+  .mob-port .en-form-submit .en-btn_send {
+    color: #fff;
+    font-family: 'NeueHaasDisplay-roman';
+    text-transform: uppercase;
+    font-size: 1.4em;
+  }
   .mob-port .mobile-container {
     overflow: hidden;
     width: 100%;
@@ -7548,9 +7570,11 @@ header {
   }
   .mob-port .slider-element-container .swiper-pagination-bullet {
     background-color: rgba(255, 255, 255, 0.9);
+    width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 16px));
+    height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 3px));
   }
   .mob-port .slider-element-container .swiper-pagination-bullet.swiper-pagination-bullet-active {
-    background-color: #F02B67;
+    background-color: #b71414;
   }
   .mob-port .slider-element-container .swiper-slide {
     width: 100%;
@@ -7626,20 +7650,6 @@ header {
   }
   .mob-port .infobox-container {
     display: none;
-  }
-  .mob-port * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  .mob-port html {
-    width: 100%;
-    height: 100%;
-    font-family: 'Source Sans Pro', sans-serif;
-  }
-  .mob-port body {
-    position: relative;
-    width: 100%;
-    height: 100%;
   }
   .mob-port .main-content {
     max-width: 1024px;
@@ -8249,6 +8259,9 @@ header {
     margin-top: 7px;
     margin-right: 120px;
   }
+  #services .accordion-container {
+    margin: 0px 0px;
+  }
 }
 .portfolio {
   padding-bottom: 15%;
@@ -8388,8 +8401,8 @@ header {
   font-size: 12em;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke: 2px;
-  -webkit-text-stroke-color: #101010;
-  font-family: 'Freight-Display-Pro-bold-italic';
+  -webkit-text-stroke-color: #ffffff1a;
+  font-family: 'Rogie';
 }
 .portfolio .back2 {
   position: relative;
@@ -10847,7 +10860,7 @@ header {
 }
 .contact-inner .gform_wrapper form .gform_footer input[type="submit"]:hover,
 .gform_wrapper form .gform_footer #gform_submit_button_2:hover {
-  /*background-color:#ff4646;*/
+  background: transparent linear-gradient(41deg, #2D4DE0 0%, #9F71F0 38%, #E76592 82%, #F8EF6F 100%) 0% 0% no-repeat padding-box;
   color: #ffffff;
 }
 .contact-inner .gform_wrapper form .gform_footer input[type="submit"]:hover em,
@@ -11076,7 +11089,7 @@ header {
 }
 @media only screen and (min-width: 1680px) {
   .contact-details-block {
-    padding-bottom: 11.161vw;
+    padding-bottom: 1.161vw;
   }
 }
 .contact-details-block ul {
@@ -11090,12 +11103,6 @@ header {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-}
-@media only screen and (min-width: 1680px) {
-  .contact-details-block ul {
-    padding: 0 0 0 8.036vw;
-    margin: -28.57vw 0 0;
-  }
 }
 .contact-details-block ul li {
   position: relative;
@@ -11167,7 +11174,7 @@ header {
   position: absolute;
   width: 0%;
   height: 1px;
-  top: 50%;
+  top: 99%;
   margin-top: 0;
   background: #fff;
 }
@@ -11736,8 +11743,8 @@ header {
   right: -70px;
 }
 .div-flex .colum-1 .over-text h2 {
-  font-size: 60px ;
-  line-height: 80px ;
+  font-size: 60px;
+  line-height: 80px;
 }
 .div-flex .six-points {
   position: relative;
