--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -147,8 +147,8 @@
             font-size: 12em;
             -webkit-text-fill-color: transparent;
             -webkit-text-stroke: 2px;
-            -webkit-text-stroke-color: #101010;
-            font-family: 'Freight-Display-Pro-bold-italic';
+            -webkit-text-stroke-color: #ffffff1a;
+            font-family: 'Rogie';
         }
     }
 
