--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -1346,17 +1346,9 @@
     }
 
     .hro-img {
-        // display: inherit;
-        // position: absolute;
-        // top: 50%;
-        // left: 50%;
-        // -webkit-transform: translate(-50%,-50%);
-        // transform: translate(-50%,-50%);
-        // width: auto;
-        // height: 820px;
         display: inherit;
         position: absolute;
-        top: 50%;
+        top: -360px;
         margin: auto;
         left: 0;
 
@@ -1460,7 +1452,7 @@
         // width: auto;
         display: inherit;
         position: absolute;
-        top: 50%;
+        top: -360px;
         margin: auto;
         left: 0;
 
@@ -1653,7 +1645,7 @@
         // height: 820px;
         display: inherit;
         position: absolute;
-        top: 50%;
+        top: -360px;
         margin: auto;
         left: 0;
 
@@ -1749,7 +1741,7 @@
     .hro-img {
         display: inherit;
         position: absolute;
-        top: 50%;
+        top: -360px;
         margin: auto;
         left: 0;
 
@@ -2804,6 +2796,7 @@
                         font-size: 15px;
                         margin-bottom: 10px;
                         letter-spacing: 1px;
+                        overflow: hidden;
                     }
 
                     p {
