--- a/assets/resources/styles/less/core/_fonts.less
+++ b/assets/resources/styles/less/core/_fonts.less
@@ -148,73 +148,45 @@
 }
 
 
-// focus
-@font-face {
-    font-family: 'Qartella-Bold';
-    src: url('/fonts/Qartella-Bold.woff');
-}
-
-@font-face {
-    font-family: 'Qartella-Bold-I';
-    src: url('/fonts/Qartella-BoldItalic.woff');
-}
-
-@font-face {
-    font-family: 'Qartella-exBold';
-    src: url('/fonts/Qartella-ExtraBold.woff');
-}
-
-@font-face {
-    font-family: 'Qartella-ExtraBoldItalic';
-    src: url('/fonts/Qartella-ExtraBoldItalic.woff');
-}
-
-@font-face {
-    font-family: 'Qartella-Regular';
-    src: url('/fonts/Qartella-Regular.woff');
-}
-
-@font-face {
-    font-family: 'Qartella-Light';
-    src: url('/fonts/Qartella-Light.woff');
-}
-
-@font-face {
-    font-family: 'FocusGrotesk-ragu';
-    src: url('/fonts/FocusGrotesk-Regular.woff');
-}
-
-@font-face {
-    font-family: 'FocusGrotesk-thin';
-    src: url('/fonts/FocusGrotesk-Thin.woff');
-}
-
-@font-face {
-    font-family: 'Rogie';
-    src: url('/fonts/Rogie.woff');
-}
-
-@font-face {
-    font-family: 'Origin-Regular';
-    src: url('/fonts/Origin-Regular.woff');
-}
-
-@font-face {
-    font-family: 'Origin-Light';
-    src: url('/fonts/Origin-Light.woff');
-}
-
-@font-face {
-    font-family: 'Origin-Bold';
-    src: url('/fonts/Origin-Bold.woff');
-}
-
-@font-face {
-    font-family: 'Origin-Heavy';
-    src: url('/fonts/Origin-Heavy.woff');
-}
 
 @font-face {
     font-family: 'Ageo';
     src: url('/fonts/Ageo.woff');
 }
+
+@font-face {
+    font-family: 'Ageo-Bold';
+    src: url('/fonts/Ageo-Bold.woff');
+}
+
+@font-face {
+    font-family: 'Ageo-BoldItalic';
+    src: url('/fonts/Ageo-BoldItalic.woff');
+}
+
+@font-face {
+    font-family: 'AgeoHeavy';
+    src: url('/fonts/Ageo-Heavy.woff');
+}
+
+
+// @font-face {
+//     font-family: 'Ageo';
+//     src: url('/fonts/Ageo.woff');
+// }
+// @font-face {
+//     font-family: 'Ageo';
+//     src: url('/fonts/Ageo.woff');
+// }
+// @font-face {
+//     font-family: 'Ageo';
+//     src: url('/fonts/Ageo.woff');
+// }
+// @font-face {
+//     font-family: 'Ageo';
+//     src: url('/fonts/Ageo.woff');
+// }
+// @font-face {
+//     font-family: 'Ageo';
+//     src: url('/fonts/Ageo.woff');
+// }
