--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -433,60 +433,20 @@ ul {
   src: url('/fonts/FreightDispProLight-Regular.woff');
 }
 @font-face {
-  font-family: 'Qartella-Bold';
-  src: url('/fonts/Qartella-Bold.woff');
-}
-@font-face {
-  font-family: 'Qartella-Bold-I';
-  src: url('/fonts/Qartella-BoldItalic.woff');
-}
-@font-face {
-  font-family: 'Qartella-exBold';
-  src: url('/fonts/Qartella-ExtraBold.woff');
-}
-@font-face {
-  font-family: 'Qartella-ExtraBoldItalic';
-  src: url('/fonts/Qartella-ExtraBoldItalic.woff');
-}
-@font-face {
-  font-family: 'Qartella-Regular';
-  src: url('/fonts/Qartella-Regular.woff');
-}
-@font-face {
-  font-family: 'Qartella-Light';
-  src: url('/fonts/Qartella-Light.woff');
-}
-@font-face {
-  font-family: 'FocusGrotesk-ragu';
-  src: url('/fonts/FocusGrotesk-Regular.woff');
-}
-@font-face {
-  font-family: 'FocusGrotesk-thin';
-  src: url('/fonts/FocusGrotesk-Thin.woff');
-}
-@font-face {
-  font-family: 'Rogie';
-  src: url('/fonts/Rogie.woff');
-}
-@font-face {
-  font-family: 'Origin-Regular';
-  src: url('/fonts/Origin-Regular.woff');
-}
-@font-face {
-  font-family: 'Origin-Light';
-  src: url('/fonts/Origin-Light.woff');
-}
-@font-face {
-  font-family: 'Origin-Bold';
-  src: url('/fonts/Origin-Bold.woff');
-}
-@font-face {
-  font-family: 'Origin-Heavy';
-  src: url('/fonts/Origin-Heavy.woff');
-}
-@font-face {
   font-family: 'Ageo';
   src: url('/fonts/Ageo.woff');
+}
+@font-face {
+  font-family: 'Ageo-Bold';
+  src: url('/fonts/Ageo-Bold.woff');
+}
+@font-face {
+  font-family: 'Ageo-BoldItalic';
+  src: url('/fonts/Ageo-BoldItalic.woff');
+}
+@font-face {
+  font-family: 'AgeoHeavy';
+  src: url('/fonts/Ageo-Heavy.woff');
 }
 .float_r {
   float: right;
@@ -4051,6 +4011,30 @@ header {
     height: 100%;
   }
 }
+#abt {
+  position: relative;
+}
+#abt > div > div > div::before {
+  content: "";
+  display: block;
+  height: 1px;
+  width: 0%;
+  background: #000;
+  position: absolute;
+  top: 0px;
+}
+#abt > div > div > div {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  position: relative;
+}
+#abt.is-inview > div > div > div::before {
+  width: 100%;
+  -webkit-transition: width 1s ease-out;
+  transition: width 1s ease-out;
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
 #about {
   padding: 10% 70px;
   -webkit-transition: 0.4s all ease-in-out;
@@ -4379,6 +4363,28 @@ header {
 #about2 {
   margin-top: 13%;
 }
+#about2 .container .he {
+  padding: 20px 0;
+  margin-bottom: 2%;
+  font-size: 3em;
+  color: #1a1a1a;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-align: left;
+  font-family: 'NeueHaasDisplay-me';
+  overflow: hidden;
+}
+#about2 .container .he span {
+  display: inline-block;
+}
+#about2 .container .parh {
+  font-size: 1.6em;
+  padding-right: 0%;
+  line-height: 2;
+  color: #1a1a1a;
+  letter-spacing: 1.5px;
+  margin-bottom: 13%;
+}
 #about2 .about-f {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4393,15 +4399,18 @@ header {
           align-items: center;
 }
 #about2 .about-p {
-  padding-left: 3%;
-  width: 31%;
+  padding-left: 2%;
+  width: 30%;
   font-size: 1.3em;
   letter-spacing: 2px;
   overflow: hidden;
+  line-height: 1.4;
 }
 #about2 .about-p p {
-  font-family: 'Ageo';
+  font-family: 'Ageo-Bold';
   font-size: 1.1em;
+  text-align: right;
+  color: #333;
 }
 #about2 .big-h {
   width: 68%;
@@ -4417,31 +4426,6 @@ header {
   line-height: 1;
   font-size: 9em;
   /* text-transform: uppercase; */
-}
-#about2 .big-h2 {
-  overflow: hidden;
-}
-#about2 .big-h2 h1 {
-  margin: 0;
-  position: relative;
-  font-family: 'NeueHaasDisplay-me';
-  left: -12px;
-  top: 0;
-  line-height: 1.4;
-  font-size: 13.2em;
-  /* text-transform: uppercase; */
-}
-#about2 .big-h3 {
-  overflow: hidden;
-}
-#about2 .big-h3 h1 {
-  margin: 0;
-  position: relative;
-  font-family: 'Origin-Regular';
-  right: -100px;
-  top: 0;
-  line-height: 1.1;
-  font-size: 9.3em;
 }
 #about2 .overlap {
   display: -webkit-box;
@@ -4750,12 +4734,10 @@ header {
 .about-us-image {
   width: 628px;
   margin-top: 68px;
-  overflow: hidden;
 }
 .about-us-images {
   width: 628px;
   margin-top: 68px;
-  overflow: hidden;
 }
 .about-us-content {
   width: 860px;
@@ -4772,11 +4754,21 @@ header {
           justify-content: space-between;
 }
 .about-us-section h1 {
-  font-size: 100px;
+  width: 100%;
+}
+.about-us-section .small-h1 {
+  font-size: 3em;
+  line-height: 1.7;
+  text-transform: uppercase;
+  margin-bottom: 0px;
+  font-family: 'NeueHaasDisplay-me';
+}
+.about-us-section .b-h1 {
+  font-size: 5em;
   line-height: 95px;
   text-transform: uppercase;
   margin-bottom: 0px;
-  font-family: 'Origin-Regular';
+  font-family: 'NeueHaasDisplay-me';
 }
 .opacity-0 {
   opacity: 0;
@@ -4792,15 +4784,6 @@ header {
 }
 .black-bg {
   color: #fff;
-}
-.top-p {
-  padding: 10% 13%;
-  font-size: 2.5em;
-  line-height: 1.2;
-  font-family: 'Ageo';
-}
-.top-p .word {
-  overflow: hidden;
 }
 .about-page {
   margin-bottom: 10%;
@@ -4821,7 +4804,6 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-top: 1px solid #000;
   padding: 31px 20px;
 }
 .about-page .container .flex .left-con {
@@ -5197,6 +5179,9 @@ header {
 }
 .about-us-image img {
   width: 100%;
+  padding: 0px 4%;
+  -webkit-animation: ww 8s ease-in-out infinite;
+          animation: ww 8s ease-in-out infinite;
 }
 .about-us-images img {
   width: 100%;
@@ -5967,6 +5952,19 @@ header {
   margin: 0px;
   letter-spacing: 3px;
   font-family: 'NeueHaasDisplay-me';
+}
+#abt {
+  position: relative;
+}
+#project > div > div > div > ul {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 33% 33% 33%;
+  grid-template-columns: 33% 33% 33%;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
 #project > div > div > div > .grdi2 {
   width: 100%;
@@ -6890,10 +6888,6 @@ header {
   #about2 .big-h h1 {
     font-size: 9.42em;
   }
-  #about2 .big-h2 h1 {
-    left: 26px;
-    letter-spacing: 2px;
-  }
   #about2 .about-p p {
     font-size: 1em;
   }
@@ -6925,18 +6919,10 @@ header {
   #about2 .big-h h1 {
     font-size: 9.8em;
   }
-  #about2 .big-h2 h1 {
-    font-size: 9.5em;
-  }
 }
 @media screen and (max-width: 1440px) {
   #about2 .big-h h1 {
     font-size: 9.42em;
-  }
-  #about2 .big-h2 h1 {
-    font-size: 9.25em;
-    left: 26px;
-    letter-spacing: 2px;
   }
   #about2 .about-p p {
     font-size: 1em;
@@ -6967,9 +6953,6 @@ header {
   #about2 .big-h h1 {
     font-size: 11.3em;
   }
-  #about2 .big-h2 h1 {
-    font-size: 11.3em;
-  }
   #about2 .about-p p {
     font-size: 1em;
   }
@@ -6991,21 +6974,18 @@ header {
 }
 @media screen and (max-width: 1280px) {
   #about2 .big-h h1 {
-    font-size: 8.3em;
-  }
-  #about2 .big-h2 h1 {
-    font-size: 8.2em;
+    font-size: 8em;
   }
   #about2 .about-p p {
-    font-size: 0.9em;
+    font-size: 1.3em;
   }
   .about-us-section {
     padding: 90px 0 30px;
     margin-bottom: 110px;
   }
   .about-us-content {
-    margin-left: 111px;
-    margin-top: 10%;
+    margin-left: 20px;
+    margin-top: 12%;
   }
   .c-hm-us_top {
     padding-top: 0.6em;
@@ -7028,11 +7008,6 @@ header {
   #about2 {
     margin-top: 20%;
   }
-  #about2 .top-p {
-    padding: 10% 7%;
-    font-size: 2em;
-    line-height: 1.2;
-  }
   #about2 .about-f {
     display: block;
   }
@@ -7053,12 +7028,6 @@ header {
   #about2 .about-f .big-h h1 {
     font-size: 4.7em;
     right: -9px;
-  }
-  #about2 .big-h2 h1 {
-    font-size: 5.2em;
-    left: 11px;
-    line-height: 1.1;
-    margin-top: 6px;
   }
   .t-d3-fluid {
     font-size: 7.8vw;
