--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -1,6 +1,40 @@
+// .about-bg-gre {
+//     background-image: url('/assets/resources/img/gradient-bgg-2.png');
+//     background-position: 0 0;
+//     background-size: 100% 99%;
+//     background-repeat: no-repeat;
+// }
+#abt {
+    position: relative;
+}
+
+#abt>div>div>div::before {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 0%;
+    background: #000;
+    position: absolute;
+    top: 0px;
+}
+
+#abt>div>div>div {
+    padding-top: 0px;
+    padding-bottom: 30px;
+    position: relative;
+}
+
+#abt.is-inview>div>div>div::before {
+    width: 100%;
+    transition: width 1s ease-out;
+    transition-delay: .5s;
+}
+
 #about {
     padding: 10% 70px;
     transition: 0.4s all ease-in-out;
+
+
 
     .about-h {
         margin-bottom: 100px;
@@ -362,6 +396,35 @@
 #about2 {
     margin-top: 13%;
 
+    .container {
+
+        .he {
+            padding: 20px 0;
+            margin-bottom: 2%;
+            font-size: 3em;
+            color: #1a1a1a;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            text-align: left;
+            font-family: 'NeueHaasDisplay-me';
+            overflow: hidden;
+
+            span {
+                display: inline-block;
+            }
+        }
+
+        .parh {
+            font-size: 1.6em;
+            padding-right: 0%;
+            line-height: 2;
+            color: #1a1a1a;
+            letter-spacing: 1.5px;
+            margin-bottom: 13%;
+        }
+
+    }
+
     .about-f {
         display: flex;
         flex-wrap: wrap;
@@ -370,15 +433,18 @@
     }
 
     .about-p {
-        padding-left: 3%;
-        width: 31%;
+        padding-left: 2%;
+        width: 30%;
         font-size: 1.3em;
         letter-spacing: 2px;
         overflow: hidden;
+        line-height: 1.4;
 
         p {
-            font-family: 'Ageo';
+            font-family: 'Ageo-Bold';
             font-size: 1.1em;
+            text-align: right;
+            color: #333;
         }
     }
 
@@ -395,6 +461,7 @@
             letter-spacing: 6px;
             line-height: 1;
             font-size: 9em;
+
             /* text-transform: uppercase; */
             // &::before {
             //     opacity: 0;
@@ -403,17 +470,17 @@
             //     bottom: 3px;
             //     width: calc(100% - .3em);
             //     height: 100%;
-            //     background: -webkit-gradient(linear,left top,right top,from(#ff71b1),color-stop(33%,#0ff),color-stop(66%,#42fa79),to(#fff36d));
-            //     background: linear-gradient(
-            // 90deg,#ff71b1 0,#0ff 33%,#42fa79 66%,#fff36d);
+            //     background: -webkit-gradient(linear, left top, right top, from(#ff71b1), color-stop(33%, #0ff), color-stop(66%, #42fa79), to(#fff36d));
+            //     background: linear-gradient(90deg, #ff71b1 0, #0ff 33%, #42fa79 66%, #fff36d);
             //     content: "";
             //     -webkit-transform: scaleY(.9) translateX(-100%);
             //     transform: scaleY(.9) translateX(-100%);
             //     -webkit-transition: -webkit-transform 1s;
             //     transition: -webkit-transform 1s;
             //     transition: transform 1s;
-            //     transition: transform 1s,-webkit-transform 1s;
+            //     transition: transform 1s, -webkit-transform 1s;
             // }
+
             // &:hover:before {
             //     opacity: 1;
             //     -webkit-transform: scaleY(.9) translateX(0);
@@ -421,39 +488,11 @@
             //     -webkit-transition: -webkit-transform 3s;
             //     transition: -webkit-transform 3s;
             //     transition: transform 3s;
-            //     transition: transform 3s,-webkit-transform 3s;
+            //     transition: transform 3s, -webkit-transform 3s;
             // }
         }
     }
 
-    .big-h2 {
-        overflow: hidden;
-
-        h1 {
-            margin: 0;
-            position: relative;
-            font-family: 'NeueHaasDisplay-me';
-            left: -12px;
-            top: 0;
-            line-height: 1.4;
-            font-size: 13.2em;
-            /* text-transform: uppercase; */
-        }
-    }
-
-    .big-h3 {
-        overflow: hidden;
-
-        h1 {
-            margin: 0;
-            position: relative;
-            font-family: 'Origin-Regular';
-            right: -100px;
-            top: 0;
-            line-height: 1.1;
-            font-size: 9.3em;
-        }
-    }
 
     .overlap {
         display: flex;
@@ -814,13 +853,13 @@
 .about-us-image {
     width: 628px;
     margin-top: 68px;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .about-us-images {
     width: 628px;
     margin-top: 68px;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .about-us-content {
@@ -837,11 +876,23 @@
 }
 
 .about-us-section h1 {
-    font-size: 100px;
+    width: 100%;
+}
+
+.about-us-section .small-h1 {
+    font-size: 3em;
+    line-height: 1.7;
+    text-transform: uppercase;
+    margin-bottom: 0px;
+    font-family: 'NeueHaasDisplay-me';
+}
+
+.about-us-section .b-h1 {
+    font-size: 5em;
     line-height: 95px;
     text-transform: uppercase;
     margin-bottom: 0px;
-    font-family: 'Origin-Regular';
+    font-family: 'NeueHaasDisplay-me';
 }
 
 .opacity-0 {
@@ -862,16 +913,7 @@
     color: #fff;
 }
 
-.top-p {
-    padding: 10% 13%;
-    font-size: 2.5em;
-    line-height: 1.2;
-    font-family: 'Ageo';
 
-    .word {
-        overflow: hidden;
-    }
-}
 
 // About-Page
 .about-page {
@@ -886,7 +928,7 @@
             flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
-            border-top: 1px solid #000;
+            // border-top: 1px solid #000;
             padding: 31px 20px;
 
             .left-con {
@@ -1054,6 +1096,7 @@
     margin: auto;
     place-items: center;
 
+
     img {
         height: 70vh;
         width: 49.29167vh;
@@ -1078,6 +1121,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 50px 10vw;
+
 
     &>* {
         min-width: 42vw;
@@ -1288,7 +1332,26 @@
 .about-us-image {
     img {
         width: 100%;
+        padding: 0px 4%;
+        animation: ww 8s ease-in-out infinite;
     }
+
+    // @keyframes ww {
+    //     0% {
+    //         transform: scale(0.98) translate(0px, 0px);
+    //     }
+
+    //     50% {
+    //         transform: scale(1) translate(-50px, -100px);
+    //     }
+
+    //     100% {
+    //         transform: scale(0.98) translate(0px, 0px);
+    //     }
+    // }
+
+
+
 }
 
 .about-us-images {
@@ -2140,6 +2203,20 @@
     font-family: 'NeueHaasDisplay-me';
 }
 
+#abt {
+    position: relative;
+}
+
+
+
+#project>div>div>div>ul {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
 
 
 // grid 2 
@@ -3189,10 +3266,7 @@
             font-size: 9.42em;
         }
 
-        .big-h2 h1 {
-            left: 26px;
-            letter-spacing: 2px;
-        }
+
 
         .about-p p {
             font-size: 1em;
@@ -3236,12 +3310,6 @@
         .big-h h1 {
             font-size: 9.8em;
         }
-
-        .big-h2 h1 {
-            font-size: 9.5em;
-        }
-
-
     }
 }
 
@@ -3250,12 +3318,6 @@
     #about2 {
         .big-h h1 {
             font-size: 9.42em;
-        }
-
-        .big-h2 h1 {
-            font-size: 9.25em;
-            left: 26px;
-            letter-spacing: 2px;
         }
 
         .about-p p {
@@ -3298,10 +3360,6 @@
             font-size: 11.3em;
         }
 
-        .big-h2 h1 {
-            font-size: 11.3em;
-        }
-
         .about-p p {
             font-size: 1em;
         }
@@ -3332,15 +3390,11 @@
 
     #about2 {
         .big-h h1 {
-            font-size: 8.3em;
-        }
-
-        .big-h2 h1 {
-            font-size: 8.2em;
+            font-size: 8em;
         }
 
         .about-p p {
-            font-size: 0.9em;
+            font-size: 1.3em;
         }
     }
 
@@ -3351,8 +3405,8 @@
     }
 
     .about-us-content {
-        margin-left: 111px;
-        margin-top: 10%;
+        margin-left: 20px;
+        margin-top: 12%;
     }
 
     .c-hm-us_top {
@@ -3382,11 +3436,6 @@
     #about2 {
         margin-top: 20%;
 
-        .top-p {
-            padding: 10% 7%;
-            font-size: 2em;
-            line-height: 1.2;
-        }
 
         .about-f {
             display: block;
@@ -3415,14 +3464,7 @@
 
         }
 
-        .big-h2 {
-            h1 {
-                font-size: 5.2em;
-                left: 11px;
-                line-height: 1.1;
-                margin-top: 6px;
-            }
-        }
+
     }
 
     .t-d3-fluid {
